# muse

./: Cargo.toml  README.md  index.d.ts  index.js  lsl_api.cfg  package.json
.claude/: settings.local.json
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
src/: ble.rs  device_state.rs  lib.rs  lsl_manager.rs
